Rotas e controllers de update de ticket refatoradas e respectiva documentação concluída
